package com.kedacom.vconf.sdk.main.conf.bean;

/**
 * Created by Sissi on 2019/7/30
 */
public class TLoginGkResult {
    public EmConfProtocol MainParam;
    public EmConfLoginResultCode AssParam;
}
