@startuml

title __BEAN's Class Diagram__\n

  namespace com.kedacom.vconf.sdk.main {
    namespace conf {
      namespace bean {
        enum EmConfLoginResultCode {
          emDupAlias_Api
          emGKDismatch_Api
          emGKFailedBegin_Api
          emGKSecurityDenial_Api
          emGKUnReachable_Api
          emInvalidAliase_Api
          emInvalidCallAddress_Api
          emRRQCreateHRASFailed_Api
          emRRQSendFailed_Api
          emRegNumberFull_Api
          emRegSuccess_Api
          emResourceUnavailable_Api
          emSecCrtExpired_Api
          emSecCrtFormatError_Api
          emSecCrtNotFind_Api
          emSecCrtVerifyFail_Api
          emSecLoadCertFailed_Api
          emSipFailedBegin_Api
          emSipInvalidAlias_Api
          emSipInvalidUserNameAndPassword_Api
          emSipLocalNormalUnreg_Api
          emSipRegisterFailed_Api
          emSipRegisterNameDup_Api
          emSipRegistrarUnReachable_Api
          emSipUnknownReason_Api
          emUnRegGKReq_Api
          emUnRegSuc_Api
          value
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace conf {
      namespace bean {
        enum EmConfProtocol {
          em323_Api
          emProtocolBegin_Api
          emsat_Api
          emsip_Api
          emtip_Api
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace conf {
      namespace bean {
        class com.kedacom.vconf.sdk.main.conf.bean.TGkSvrAddr {
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace conf {
      namespace bean {
        class com.kedacom.vconf.sdk.main.conf.bean.TLoginGkPara {
            + achDomain : String
            + achNumber : String
            + achPassword : String
            + bUsedCSU : boolean
            + dwIp : long
            + dwPort : int
            + dwTimeToLive : int
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace conf {
      namespace bean {
        class com.kedacom.vconf.sdk.main.conf.bean.TLoginGkResult {
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace conf {
      namespace bean {
        class com.kedacom.vconf.sdk.main.conf.bean.TSipSvrAddr {
        }
      }
    }
  }
  

  com.kedacom.vconf.sdk.main.conf.bean.TLoginGkResult o-- com.kedacom.vconf.sdk.main.conf.bean.EmConfLoginResultCode : AssParam
  com.kedacom.vconf.sdk.main.conf.bean.TLoginGkResult o-- com.kedacom.vconf.sdk.main.conf.bean.EmConfProtocol : MainParam


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
